device: improved device interface
It is now possible to:

  - manually set the gain
  - get the current gain
  - get the list of supported gains

Additionally, the gain now actually works for RTL-SDR devices. The RTL
based device demo has been renamed to rtl_dump and now actually works.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,11 @@ option(${${PROJECT_NAME}_UPPER}_ENABLE_TESTS
   OFF
   )
 
+option(${${PROJECT_NAME}_UPPER}_ENABLE_DEMOS
+  "Build the ${PROJECT_NAME} demos."
+  OFF
+  )
+
 if(${${${PROJECT_NAME}_UPPER}_ENABLE_TESTS})
   set(CONAN_OPTIONS libdabdevice:test=True)
 endif()
@@ -29,6 +34,7 @@ find_package(Boost REQUIRED)
 
 add_subdirectory("common")
 add_subdirectory("include")
+add_subdirectory("src")
 
 if(${${PROJECT_NAME}_UPPER}_ENABLE_TESTS)
   include("CUTE")
