--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,2 +1,3 @@
-add_executable(demo demo.cpp)
-target_link_libraries(demo ${CMAKE_THREAD_LIBS_INIT} rtlsdr)
+if(${${PROJECT_NAME}_UPPER}_ENABLE_DEMOS)
+  add_subdirectory("demos")
+endif()
