cmake: update build system

--- a/test/rtl/CMakeLists.txt
+++ b/test/rtl/CMakeLists.txt
@@ -1,4 +1,4 @@
 set(CUTE_GROUP "rtl")
 
 cute_test(file
-  LIBRARIES ${${PROJECT_NAME}_LOWER})
+  LIBRARIES ${${PROJECT_NAME}_LOWER} ${${${PROJECT_NAME}_UPPER}_DEPS})
